# demo_test

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .sops.yaml  AGENTS.md  README.md  ReadMeAIBugs.html  ReadMeAIBugs.md  clear-reports.ps1  pyproject.toml  pytest.ini  test-assertions.html  test-assertions.md
.cursor/: mcp.json
.cursor/commands/: add-page-object.md  add-test-case.md  debug-failing-locator.md
.cursor/rules/: 00-project-overview.mdc  10-python-style.mdc  20-playwright-pom.mdc  30-test-authoring.mdc  40-locator-strategy.mdc
.github/workflows/: e2e-tests.yml
data/: queries.yaml
docs/: ai-workflow.md  coverage-matrix.html  exercise-brief.html  test-assertions.html  test-assertions.md
docs/personas/: code-reviewer.md  qa-architect.md  test-engineer.md
flow_control/: run-e2e.ps1
reports/: junit.xml
reports/allure-html/: index.html
reports/allure-html/data/: behaviors.csv  behaviors.json  suites.csv  (+3 more)
scripts/: build-report.ps1  decrypt-env.ps1  encrypt-env.ps1  make_login_evidence.py  open-report.ps1  run-suite.ps1  run-with-login.ps1  setup-secrets.ps1  view-report.ps1
src/: __init__.py
src/components/: __init__.py  header.py  paginator.py  price_filter.py  product_card.py
src/config/: __init__.py  settings.py
src/flows/: __init__.py  auth_flow.py  cart_flow.py  search_flow.py
src/pages/: __init__.py  base_page.py  cart_page.py  checkout_page.py  home_page.py  login_page.py  product_page.py  search_results_page.py
src/utils/: __init__.py  logger.py  price_parser.py  screenshot.py  variant_picker.py
tests/: _test_paths.py  conftest.py  test_e2e_purchase_flow.py  test_login.py  test_price_parser_unit.py  test_search_data_driven.py
(+38 files in other folders)
